rpc receive rdf content.